optional/cloudformation.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: >
  Healthcare app

Parameters:
  VpcCidr:
    Type: String
    Default: 10.20.0.0/16

  PublicSubnetACidr:
    Type: String
    Default: 10.20.1.0/24

  PublicSubnetBCidr:
    Type: String
    Default: 10.20.2.0/24

  PrivateSubnetACidr:
    Type: String
    Default: 10.20.101.0/24

  PrivateSubnetBCidr:
    Type: String
    Default: 10.20.102.0/24

  EcrImageUri:
    Type: String
    Description: "Your ECR image URI:"

  ContainerPort:
    Type: Number
    Default: 80

  HealthCheckPath:
    Type: String
    Default: /
    Description: "ALB target group health check path:"

  Cpu:
    Type: String
    Default: "256"
    AllowedValues: ["256", "512", "1024", "2048", "4096"]

  Memory:
    Type: String
    Default: "512"
    AllowedValues: ["512", "1024", "2048", "3072", "4096", "5120", "6144", "7168", "8192", "16384", "30720"]

  DBEngine:
    Type: String
    Default: mysql
    AllowedValues: [mysql, postgres]

  DBName:
    Type: String
    Default: healthcaredb

  DBUsername:
    Type: String
    MinLength: 1
    MaxLength: 32
    AllowedPattern: "^[a-zA-Z][a-zA-Z0-9_]*$"
    Description: "Choose a DB master username (stored in Secrets Manager)"

  DBPassword:
    Type: String
    NoEcho: true
    MinLength: 8
    MaxLength: 41
    Description: "Choose a DB master password (NoEcho; stored in Secrets Manager)"

  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: "EC2 key pair name for SSH access to temporary-instance"

  SSHCidr:
    Type: String
    Default: 0.0.0.0/0
    Description: "CIDR allowed to SSH to the EC2 instance (restrict this in real use)"

Mappings:
  RegionMap:
    us-east-1:
      AZa: us-east-1a
      AZb: us-east-1b

Conditions:
  IsMySQL: !Equals [!Ref DBEngine, mysql]

Resources:

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: HealthcareAppVPC
        - Key: Environment
          Value: sandbox

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: internet gateway
        - Key: Environment
          Value: sandbox

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway


  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !FindInMap [RegionMap, !Ref "AWS::Region", AZa]
      CidrBlock: !Ref PublicSubnetACidr
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PublicSubnet-us-east-1a
        - Key: Environment
          Value: sandbox

  PublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !FindInMap [RegionMap, !Ref "AWS::Region", AZb]
      CidrBlock: !Ref PublicSubnetBCidr
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PublicSubnet-us-east-1b
        - Key: Environment
          Value: sandbox

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: PublicRouteTable
        - Key: Environment
          Value: sandbox

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetARouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref PublicRouteTable

  PublicSubnetBRouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetB
      RouteTableId: !Ref PublicRouteTable


  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !FindInMap [RegionMap, !Ref "AWS::Region", AZa]
      CidrBlock: !Ref PrivateSubnetACidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: PrivateSubnet-us-east-1a
        - Key: Environment
          Value: sandbox

  PrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !FindInMap [RegionMap, !Ref "AWS::Region", AZb]
      CidrBlock: !Ref PrivateSubnetBCidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: PrivateSubnet-us-east-1b
        - Key: Environment
          Value: sandbox

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: PrivateRouteTable
        - Key: Environment
          Value: sandbox

  PrivateSubnetARouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetA
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnetBRouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetB
      RouteTableId: !Ref PrivateRouteTable


  AlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP to ALB
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: AlbSG
        - Key: Environment
          Value: sandbox

  FargateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow ALB to Fargate tasks
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref ContainerPort
          ToPort: !Ref ContainerPort
          SourceSecurityGroupId: !Ref AlbSecurityGroup
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: FargateSG
        - Key: Environment
          Value: sandbox

  Ec2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: EC2 SG allowing SSH in and DB out
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHCidr
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: Ec2SG
        - Key: Environment
          Value: sandbox

  RdsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow DB access from Fargate and EC2
      VpcId: !Ref VPC
      SecurityGroupIngress:
        # Allow both MySQL and Postgres from ECS/EC2 SGs (simple + works with DBEngine choice)
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref FargateSecurityGroup
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref Ec2SecurityGroup
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref FargateSecurityGroup
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref Ec2SecurityGroup
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: RdsSG
        - Key: Environment
          Value: sandbox


  DbSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Private subnets for RDS (2 AZ coverage required by RDS)
      SubnetIds:
        - !Ref PrivateSubnetA
        - !Ref PrivateSubnetB
      Tags:
        - Key: Environment
          Value: sandbox

  DbHealth:
    Type: AWS::RDS::DBInstance
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      DBInstanceIdentifier: db-health
      DBInstanceClass: db.t3.micro
      AllocatedStorage: 20
      StorageType: gp2
      Engine: !Ref DBEngine
      DBName: !Ref DBName
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Ref DBPassword
      AvailabilityZone: us-east-1a
      MultiAZ: false
      PubliclyAccessible: false
      BackupRetentionPeriod: 0
      DeletionProtection: false
      VPCSecurityGroups:
        - !Ref RdsSecurityGroup
      DBSubnetGroupName: !Ref DbSubnetGroup
      Tags:
        - Key: Name
          Value: db-health
        - Key: Environment
          Value: sandbox

  DbSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: !Sub "db-health-connection-${AWS::StackName}"
      Description: "RDS connection parameters for db-health (sandbox)"
      SecretString: !Sub
        - |
          {
            "environment": "sandbox",
            "engine": "${Engine}",
            "host": "${Host}",
            "port": ${Port},
            "dbname": "${DBName}",
            "username": "${DBUsername}",
            "password": "${DBPassword}"
          }
        - Engine: !Ref DBEngine
          Host: !GetAtt DbHealth.Endpoint.Address
          Port: !GetAtt DbHealth.Endpoint.Port
          DBName: !Ref DBName
          DBUsername: !Ref DBUsername
          DBPassword: !Ref DBPassword
      Tags:
        - Key: Environment
          Value: sandbox


  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: healthcare-alb
      Scheme: internet-facing
      Type: application
      Subnets:
        - !Ref PublicSubnetA
        - !Ref PublicSubnetB
      SecurityGroups:
        - !Ref AlbSecurityGroup
      Tags:
        - Key: Environment
          Value: sandbox

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      VpcId: !Ref VPC
      TargetType: ip
      Port: !Ref ContainerPort
      Protocol: HTTP
      HealthCheckProtocol: HTTP
      HealthCheckPath: !Ref HealthCheckPath
      Matcher:
        HttpCode: "200-399"

  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref LoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup


  EcsCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: healthcare-ecs-cluster
      Tags:
        - Key: Environment
          Value: sandbox

  TaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub "healthcare-ecs-exec-${AWS::StackName}"
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
      Policies:
        - PolicyName: AllowReadDbSecret
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - secretsmanager:GetSecretValue
                Resource: !Ref DbSecret
      Tags:
        - Key: Environment
          Value: sandbox

  TaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: !Sub "healthcare-app-${AWS::StackName}"
      RequiresCompatibilities: [FARGATE]
      NetworkMode: awsvpc
      Cpu: !Ref Cpu
      Memory: !Ref Memory
      ExecutionRoleArn: !GetAtt TaskExecutionRole.Arn
      ContainerDefinitions:
        - Name: app
          Image: !Ref EcrImageUri
          Essential: true
          PortMappings:
            - ContainerPort: !Ref ContainerPort
              Protocol: tcp
          
          Secrets:
            - Name: DB_ENGINE
              ValueFrom: !Sub "${DbSecret}:engine::"
            - Name: DB_HOST
              ValueFrom: !Sub "${DbSecret}:host::"
            - Name: DB_PORT
              ValueFrom: !Sub "${DbSecret}:port::"
            - Name: DB_NAME
              ValueFrom: !Sub "${DbSecret}:dbname::"
            - Name: DB_USER
              ValueFrom: !Sub "${DbSecret}:username::"
            - Name: DB_PASS
              ValueFrom: !Sub "${DbSecret}:password::"

  Service:
    Type: AWS::ECS::Service
    DependsOn: Listener
    Properties:
      ServiceName: healthcare-fargate-service
      Cluster: !Ref EcsCluster
      LaunchType: FARGATE
      DesiredCount: 1
      TaskDefinition: !Ref TaskDefinition
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          Subnets:
            - !Ref PublicSubnetA
            - !Ref PublicSubnetB
          SecurityGroups:
            - !Ref FargateSecurityGroup
      LoadBalancers:
        - ContainerName: app
          ContainerPort: !Ref ContainerPort
          TargetGroupArn: !Ref TargetGroup


  Ec2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      KeyName: !Ref KeyName
      SubnetId: !Ref PublicSubnetA
      SecurityGroupIds:
        - !Ref Ec2SecurityGroup
      ImageId: !Sub "{{resolve:ssm:/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64}}"
      Tags:
        - Key: Name
          Value: temporary-instance
        - Key: Environment
          Value: sandbox

Outputs:
  VpcId:
    Value: !Ref VPC

  AlbDnsName:
    Value: !GetAtt LoadBalancer.DNSName

  RdsEndpoint:
    Value: !GetAtt DbHealth.Endpoint.Address

  RdsPort:
    Value: !GetAtt DbHealth.Endpoint.Port

  DbSecretArn:
    Value: !Ref DbSecret
